fix spacing-4

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -38,7 +38,7 @@ main, footer {
 }
 
 main {
-  padding-top: var(--spacing-2);
+  padding-top: var(--spacing-4);
   h2 {
     border-bottom: 1px solid #424242;
   }
